--- a/Titanic_Servival_Prediction_TASK1.ipynb
+++ b/Titanic_Servival_Prediction_TASK1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfZe+rYwIeYykVxxfNN4Iq",
+      "authorship_tag": "ABX9TyMg0HraqfDBE4xMFqqaxJSK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,22 +28,23 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"sahil\")"
+      ],
       "metadata": {
+        "id": "TQKDJmDAj3qi",
+        "outputId": "b03cd496-4bd9-4c0c-9df7-8a726b964220",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "lCyu0IDOhk_L",
-        "outputId": "d834aedd-c51c-4ae0-c1ea-037caabe11f3"
+        }
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'Titanic-Servival-Prediction'...\n",
-            "fatal: repository 'https://github.com/SahilMalavi/CODSOFT/tree/Titanic-Servival-Prediction/' not found\n"
+            "sahil\n"
           ]
         }
       ]
