--- a/Titanic_Servival_Prediction_TASK1.ipynb
+++ b/Titanic_Servival_Prediction_TASK1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMg0HraqfDBE4xMFqqaxJSK",
+      "authorship_tag": "ABX9TyPzgbKerLRuDm3D3+JQ4+V2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,22 +29,33 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"sahil\")"
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "# import os\n",
+        "# for dirname, _, filenames in os.walk('/kaggle/input'):\n",
+        "#     for filename in filenames:\n",
+        "#         print(os.path.join(dirname, filename))\n",
+        "\n",
+        "df = pd.read_csv(\"/content/tested.csv)\n",
+        "df.head()\n"
       ],
       "metadata": {
-        "id": "TQKDJmDAj3qi",
-        "outputId": "b03cd496-4bd9-4c0c-9df7-8a726b964220",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "id": "TQKDJmDAj3qi",
+        "outputId": "38dc14c4-72b8-45a9-c004-989d8e181c4d"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "sahil\n"
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-86e84457b426>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    df = pd.read_csv(\"/content/tested.csv)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 9)\n"
           ]
         }
       ]
