--- a/Titanic_Servival_Prediction_TASK1.ipynb
+++ b/Titanic_Servival_Prediction_TASK1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzgbKerLRuDm3D3+JQ4+V2",
+      "authorship_tag": "ABX9TyPABvzksu6MgCa1J+kIPbIK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "#     for filename in filenames:\n",
         "#         print(os.path.join(dirname, filename))\n",
         "\n",
-        "df = pd.read_csv(\"/content/tested.csv)\n",
+        "df = pd.read_csv(\"content/tested.csv)\n",
         "df.head()\n"
       ],
       "metadata": {
@@ -46,16 +46,16 @@
           "height": 130
         },
         "id": "TQKDJmDAj3qi",
-        "outputId": "38dc14c4-72b8-45a9-c004-989d8e181c4d"
+        "outputId": "aac667d7-9000-4f65-b249-76aa4bd9d6ac"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-86e84457b426>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    df = pd.read_csv(\"/content/tested.csv)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 9)\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-d2dc7d9465b1>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    df = pd.read_csv(\"content/tested.csv)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 9)\n"
           ]
         }
       ]
