--- a/Titanic_Servival_Prediction_TASK1.ipynb
+++ b/Titanic_Servival_Prediction_TASK1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+ppwbThX3c3KN2vinK4GO",
+      "authorship_tag": "ABX9TyPDJ+QK0JDtarrFvZ7upniT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,16 +35,12 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
-        "# Load the Titanic dataset\n",
-        "url=\"/content/tested.csv\"\n",
-        "# Replace 'username', 'repository', and 'branch' with your actual GitHub details\n",
-        "df = pd.read_csv(url)\n",
         "\n",
-        "# Preprocessing\n",
-        "df = df[['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Embarked', 'Survived']]  # Select relevant features\n",
-        "df = df.dropna()  # Drop rows with missing values\n",
+        "df = pd.read_csv(\"/content/tested.csv\")\n",
         "\n",
-        "# Convert categorical variables to numerical\n",
+        "df = df[['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Embarked', 'Survived']]\n",
+        "df = df.dropna()\n",
+        "\n",
         "df['Sex'] = df['Sex'].map({'male': 0, 'female': 1})\n",
         "df = pd.get_dummies(df, columns=['Embarked'])\n",
         "\n",
@@ -55,7 +51,6 @@
         "# Split the data into training and testing sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=7)\n",
         "\n",
-        "# Feature scaling\n",
         "scaler = StandardScaler()\n",
         "X_train = scaler.fit_transform(X_train)\n",
         "X_test = scaler.transform(X_test)\n",
@@ -73,12 +68,12 @@
       ],
       "metadata": {
         "id": "h2IQDRqwzvwK",
-        "outputId": "3938ca6e-85b9-4f1c-b240-bb76d544b5e0",
+        "outputId": "4dcb0ad5-887b-43c1-95fd-e26d5ff594c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 93,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
