--- a/Titanic_Servival_Prediction_TASK1.ipynb
+++ b/Titanic_Servival_Prediction_TASK1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1LjGBYOcCbXuyrZWJriqo",
+      "authorship_tag": "ABX9TyNjR6/MTXrD0zHK1JFGnqc7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
       ],
       "metadata": {
         "id": "h2IQDRqwzvwK",
-        "outputId": "0e5eb6fb-60a4-4304-a2da-7ff38f607fd1",
+        "outputId": "a3f82d7a-e9bd-400a-87af-ba27348456e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -76,7 +76,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-66538ca4-f8ba-4e22-864e-20855dcf2e0d\">\n",
+              "  <div id=\"df-d4b083ee-8bfa-4bd0-bb81-f7794fad73c4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -189,7 +189,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-66538ca4-f8ba-4e22-864e-20855dcf2e0d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4b083ee-8bfa-4bd0-bb81-f7794fad73c4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -240,12 +240,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-66538ca4-f8ba-4e22-864e-20855dcf2e0d button.colab-df-convert');\n",
+              "          document.querySelector('#df-d4b083ee-8bfa-4bd0-bb81-f7794fad73c4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-66538ca4-f8ba-4e22-864e-20855dcf2e0d');\n",
+              "          const element = document.querySelector('#df-d4b083ee-8bfa-4bd0-bb81-f7794fad73c4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -268,7 +268,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 3
         }
       ]
     },
@@ -282,13 +282,13 @@
       ],
       "metadata": {
         "id": "exrHDj66xFzC",
-        "outputId": "3403fef0-46c4-488e-ed22-2b668e8c2d42",
+        "outputId": "34698f9e-30e0-43d2-8cd1-b265ed32f9c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,7 +303,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-35c3de44-7391-4a8d-8e83-52588f84b01e\">\n",
+              "  <div id=\"df-919a8c6f-462b-41cf-a076-4a537904f93d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -392,7 +392,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-35c3de44-7391-4a8d-8e83-52588f84b01e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-919a8c6f-462b-41cf-a076-4a537904f93d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -443,12 +443,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-35c3de44-7391-4a8d-8e83-52588f84b01e button.colab-df-convert');\n",
+              "          document.querySelector('#df-919a8c6f-462b-41cf-a076-4a537904f93d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-35c3de44-7391-4a8d-8e83-52588f84b01e');\n",
+              "          const element = document.querySelector('#df-919a8c6f-462b-41cf-a076-4a537904f93d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -471,7 +471,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 4
         }
       ]
     },
@@ -485,13 +485,13 @@
       ],
       "metadata": {
         "id": "421J0XZnxg51",
-        "outputId": "9fe4bb62-546e-4c5a-b1e8-b100f14eda61",
+        "outputId": "aa3fad0b-fd3a-4b1c-f6df-5205b72395a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +513,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-03d52117-9134-4346-a7be-c1a0f150182d\">\n",
+              "  <div id=\"df-80d07f36-9993-4887-bbe1-ba2eb5553ef1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -614,7 +614,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-03d52117-9134-4346-a7be-c1a0f150182d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-80d07f36-9993-4887-bbe1-ba2eb5553ef1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -665,12 +665,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-03d52117-9134-4346-a7be-c1a0f150182d button.colab-df-convert');\n",
+              "          document.querySelector('#df-80d07f36-9993-4887-bbe1-ba2eb5553ef1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-03d52117-9134-4346-a7be-c1a0f150182d');\n",
+              "          const element = document.querySelector('#df-80d07f36-9993-4887-bbe1-ba2eb5553ef1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -693,7 +693,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 5
         }
       ]
     },
@@ -708,13 +708,13 @@
       ],
       "metadata": {
         "id": "L0oa6A9Txzek",
-        "outputId": "1c7a9e49-997a-4f9a-aa93-e6c9a15d03d1",
+        "outputId": "083c098b-3bd6-418d-e819-8bc7113ac402",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +736,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-16f5a409-e954-4edc-9f61-62572adafc51\">\n",
+              "  <div id=\"df-a23bbdc0-475b-4849-8e22-a7b3cd1b21a3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -831,7 +831,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-16f5a409-e954-4edc-9f61-62572adafc51')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a23bbdc0-475b-4849-8e22-a7b3cd1b21a3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -882,12 +882,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-16f5a409-e954-4edc-9f61-62572adafc51 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a23bbdc0-475b-4849-8e22-a7b3cd1b21a3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-16f5a409-e954-4edc-9f61-62572adafc51');\n",
+              "          const element = document.querySelector('#df-a23bbdc0-475b-4849-8e22-a7b3cd1b21a3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -910,7 +910,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 6
         }
       ]
     },
@@ -926,7 +926,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +950,7 @@
       "source": [
         "\n",
         "# training and testing sets\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=7)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=2)\n",
         "\n",
         "scaler = StandardScaler()\n",
         "X_train = scaler.fit_transform(X_train)\n",
@@ -959,28 +959,87 @@
         "# Train a logistic regression model\n",
         "model = LogisticRegression()\n",
         "model.fit(X_train, y_train)\n",
-        "\n",
-        "# Predict on the test set\n",
-        "y_pred = model.predict(X_test)\n",
-        "\n",
-        "# Evaluate the model\n",
-        "accuracy = accuracy_score(y_test, y_pred)\n",
-        "print(\"Accuracy:\", accuracy)\n"
+        "model.fit(X_test,y_test)\n",
+        "\n"
       ],
       "metadata": {
         "id": "eShJ5yaXyEI6",
-        "outputId": "dcddb540-c795-4687-9697-e211a5f969d6",
+        "outputId": "01adbb7a-432a-4205-d92d-dca25384af24",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 75
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression()"
+            ],
+            "text/html": [
+              "<style>#sk-container-id-5 {color: black;background-color: white;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Predict on the test set\n",
+        "X_pred = model.predict(X_train)\n",
+        "print(X_pred)\n"
+      ],
+      "metadata": {
+        "id": "FNGQf2T11s07",
+        "outputId": "4de14f23-66bb-4b5b-814f-8f8ff6a44947",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 1.0\n"
+            "[0 0 1 0 0 1 1 0 1 1 0 1 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0\n",
+            " 1 1 1 0 1 0 0 0 0 1 0 1 0 1 0 0 0 0 0 0 1 1 1 0 0 0 0 1 1 0 1 1 0 1 0 0 0\n",
+            " 1 1 0 1 1 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 1 1 1 0 0 1 1 0\n",
+            " 0 0 1 0 0 0 1 0 0 0 0 0 0 0 1 1 1 0 0 1 0 1 0 1 1 1 1 0 0 0 1 1 0 1 0 0 1\n",
+            " 1 0 0 0 1 0 1 1 1 1 0 0 0 1 1 0 0 1 1 0 1 0 0 0 1 0 0 0 1 1 1 1 1 0 1 0 0\n",
+            " 0 1 1 1 0 1 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0\n",
+            " 0 0 1 0 0 0 0 0 0 1 0 1 0 1 0 0 1 1 0 0 0 0 0 1 0 0 0 1 0 1 0 1 0 0 0 0 1\n",
+            " 0 1 1 0 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "accuracy = accuracy_score(y_train, X_pred)\n",
+        "print(\"Accuracy Score:\", accuracy)"
+      ],
+      "metadata": {
+        "id": "uMqd1XRO2Aps",
+        "outputId": "36a2c4be-1942-46b0-ed2f-1e5b80103750",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy Score: 1.0\n"
           ]
         }
       ]
