--- a/Titanic_Servival_Prediction_TASK1.ipynb
+++ b/Titanic_Servival_Prediction_TASK1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUcV+rBriqafInL9dPcHe8",
+      "authorship_tag": "ABX9TyPctcd1TCy4g82cJkm7QNBT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
       ],
       "metadata": {
         "id": "h2IQDRqwzvwK",
-        "outputId": "a3f82d7a-e9bd-400a-87af-ba27348456e2",
+        "outputId": "cd3ffa22-9602-4697-e60c-f98cd3873541",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 3,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -76,7 +76,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d4b083ee-8bfa-4bd0-bb81-f7794fad73c4\">\n",
+              "  <div id=\"df-8cd123e4-e0ec-4e20-b65e-2970d314cc1b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -189,7 +189,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4b083ee-8bfa-4bd0-bb81-f7794fad73c4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8cd123e4-e0ec-4e20-b65e-2970d314cc1b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -240,12 +240,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d4b083ee-8bfa-4bd0-bb81-f7794fad73c4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8cd123e4-e0ec-4e20-b65e-2970d314cc1b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d4b083ee-8bfa-4bd0-bb81-f7794fad73c4');\n",
+              "          const element = document.querySelector('#df-8cd123e4-e0ec-4e20-b65e-2970d314cc1b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -268,7 +268,45 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "oiiVO01eACXw",
+        "outputId": "1bac6319-ebf2-49c2-8305-07c6613d8352",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PassengerId      0\n",
+              "Survived         0\n",
+              "Pclass           0\n",
+              "Name             0\n",
+              "Sex              0\n",
+              "Age             86\n",
+              "SibSp            0\n",
+              "Parch            0\n",
+              "Ticket           0\n",
+              "Fare             1\n",
+              "Cabin          327\n",
+              "Embarked         0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
         }
       ]
     },
@@ -282,13 +320,13 @@
       ],
       "metadata": {
         "id": "exrHDj66xFzC",
-        "outputId": "34698f9e-30e0-43d2-8cd1-b265ed32f9c7",
+        "outputId": "f83c5676-e5ea-42ee-eeef-87ca22091aa6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 4,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,7 +341,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-919a8c6f-462b-41cf-a076-4a537904f93d\">\n",
+              "  <div id=\"df-96a50838-6c12-4947-80fc-61255a009fd1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -392,7 +430,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-919a8c6f-462b-41cf-a076-4a537904f93d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-96a50838-6c12-4947-80fc-61255a009fd1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -443,12 +481,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-919a8c6f-462b-41cf-a076-4a537904f93d button.colab-df-convert');\n",
+              "          document.querySelector('#df-96a50838-6c12-4947-80fc-61255a009fd1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-919a8c6f-462b-41cf-a076-4a537904f93d');\n",
+              "          const element = document.querySelector('#df-96a50838-6c12-4947-80fc-61255a009fd1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -471,7 +509,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 60
         }
       ]
     },
@@ -485,13 +523,13 @@
       ],
       "metadata": {
         "id": "421J0XZnxg51",
-        "outputId": "aa3fad0b-fd3a-4b1c-f6df-5205b72395a5",
+        "outputId": "2cba5e4a-02f1-4dba-d6cb-981d9ababf85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 5,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +551,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-80d07f36-9993-4887-bbe1-ba2eb5553ef1\">\n",
+              "  <div id=\"df-caba6db7-0d0f-4af1-8438-14aa66715944\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -614,7 +652,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-80d07f36-9993-4887-bbe1-ba2eb5553ef1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-caba6db7-0d0f-4af1-8438-14aa66715944')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -665,12 +703,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-80d07f36-9993-4887-bbe1-ba2eb5553ef1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-caba6db7-0d0f-4af1-8438-14aa66715944 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-80d07f36-9993-4887-bbe1-ba2eb5553ef1');\n",
+              "          const element = document.querySelector('#df-caba6db7-0d0f-4af1-8438-14aa66715944');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -693,7 +731,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 61
         }
       ]
     },
@@ -704,17 +742,17 @@
         "# Split the dataset into features and target variable\n",
         "X = df.drop('Survived', axis=1)\n",
         "y = df['Survived']\n",
-        "X.head()\n"
+        "X.head()"
       ],
       "metadata": {
         "id": "L0oa6A9Txzek",
-        "outputId": "083c098b-3bd6-418d-e819-8bc7113ac402",
+        "outputId": "3a4445a5-da2f-44f5-aebd-7eaebdbddc22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 6,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +774,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a23bbdc0-475b-4849-8e22-a7b3cd1b21a3\">\n",
+              "  <div id=\"df-7c3dac9f-22c6-4446-937a-e0d286c1bb85\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -831,7 +869,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a23bbdc0-475b-4849-8e22-a7b3cd1b21a3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7c3dac9f-22c6-4446-937a-e0d286c1bb85')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -882,12 +920,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a23bbdc0-475b-4849-8e22-a7b3cd1b21a3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7c3dac9f-22c6-4446-937a-e0d286c1bb85 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a23bbdc0-475b-4849-8e22-a7b3cd1b21a3');\n",
+              "          const element = document.querySelector('#df-7c3dac9f-22c6-4446-937a-e0d286c1bb85');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -910,7 +948,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 65
         }
       ]
     },
@@ -978,9 +1016,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FNGQf2T11s07",
-        "outputId": "879d51b1-9d81-4307-e7e4-13a622bd3f0c"
+        "outputId": "a92866b9-d906-44f2-f786-45a6b4978377"
       },
-      "execution_count": 56,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -1010,9 +1048,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uMqd1XRO2Aps",
-        "outputId": "cf9d4d73-72e5-4fa9-f135-e569397f1cd3"
+        "outputId": "1a9b51b4-4ce1-43d1-c5ad-1c12c056482e"
       },
-      "execution_count": 55,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
