--- a/Titanic_Servival_Prediction_TASK1.ipynb
+++ b/Titanic_Servival_Prediction_TASK1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPctcd1TCy4g82cJkm7QNBT",
+      "authorship_tag": "ABX9TyOqTMFxdeR+4KTleLUMbyJ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
       ],
       "metadata": {
         "id": "h2IQDRqwzvwK",
-        "outputId": "cd3ffa22-9602-4697-e60c-f98cd3873541",
+        "outputId": "da219d03-b67b-403b-a7d8-aa3404f95fe2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 285
         }
       },
-      "execution_count": 58,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -76,7 +76,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8cd123e4-e0ec-4e20-b65e-2970d314cc1b\">\n",
+              "  <div id=\"df-be0c2898-20d4-4eb8-96ca-bd20e7c50f20\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -189,7 +189,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8cd123e4-e0ec-4e20-b65e-2970d314cc1b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-be0c2898-20d4-4eb8-96ca-bd20e7c50f20')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -240,12 +240,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8cd123e4-e0ec-4e20-b65e-2970d314cc1b button.colab-df-convert');\n",
+              "          document.querySelector('#df-be0c2898-20d4-4eb8-96ca-bd20e7c50f20 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8cd123e4-e0ec-4e20-b65e-2970d314cc1b');\n",
+              "          const element = document.querySelector('#df-be0c2898-20d4-4eb8-96ca-bd20e7c50f20');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -268,7 +268,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 4
         }
       ]
     },
@@ -279,12 +279,12 @@
       ],
       "metadata": {
         "id": "oiiVO01eACXw",
-        "outputId": "1bac6319-ebf2-49c2-8305-07c6613d8352",
+        "outputId": "b8d96cc7-6ef9-433a-fa65-3253e55ab913",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 5
         }
       ]
     },
@@ -320,13 +320,13 @@
       ],
       "metadata": {
         "id": "exrHDj66xFzC",
-        "outputId": "f83c5676-e5ea-42ee-eeef-87ca22091aa6",
+        "outputId": "3f6af069-e09a-47f2-8775-ad4370cf604f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 60,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-96a50838-6c12-4947-80fc-61255a009fd1\">\n",
+              "  <div id=\"df-344f313f-f71f-4688-811f-4c843533baeb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -430,7 +430,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-96a50838-6c12-4947-80fc-61255a009fd1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-344f313f-f71f-4688-811f-4c843533baeb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -481,12 +481,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-96a50838-6c12-4947-80fc-61255a009fd1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-344f313f-f71f-4688-811f-4c843533baeb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-96a50838-6c12-4947-80fc-61255a009fd1');\n",
+              "          const element = document.querySelector('#df-344f313f-f71f-4688-811f-4c843533baeb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -509,7 +509,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 6
         }
       ]
     },
@@ -523,13 +523,13 @@
       ],
       "metadata": {
         "id": "421J0XZnxg51",
-        "outputId": "2cba5e4a-02f1-4dba-d6cb-981d9ababf85",
+        "outputId": "39b422e7-3a14-401c-9c84-3c67ddbea18b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 61,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +551,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-caba6db7-0d0f-4af1-8438-14aa66715944\">\n",
+              "  <div id=\"df-cc773497-6043-415f-ac6c-873f12025a2c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -652,7 +652,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-caba6db7-0d0f-4af1-8438-14aa66715944')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cc773497-6043-415f-ac6c-873f12025a2c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -703,12 +703,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-caba6db7-0d0f-4af1-8438-14aa66715944 button.colab-df-convert');\n",
+              "          document.querySelector('#df-cc773497-6043-415f-ac6c-873f12025a2c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-caba6db7-0d0f-4af1-8438-14aa66715944');\n",
+              "          const element = document.querySelector('#df-cc773497-6043-415f-ac6c-873f12025a2c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -731,7 +731,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 7
         }
       ]
     },
@@ -746,13 +746,13 @@
       ],
       "metadata": {
         "id": "L0oa6A9Txzek",
-        "outputId": "3a4445a5-da2f-44f5-aebd-7eaebdbddc22",
+        "outputId": "c1ea94e3-27c3-4b6a-a73b-9b967398156b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 65,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -774,7 +774,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7c3dac9f-22c6-4446-937a-e0d286c1bb85\">\n",
+              "  <div id=\"df-d5000031-a070-429e-a53a-59a45d8c5c30\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -869,7 +869,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7c3dac9f-22c6-4446-937a-e0d286c1bb85')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d5000031-a070-429e-a53a-59a45d8c5c30')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -920,12 +920,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7c3dac9f-22c6-4446-937a-e0d286c1bb85 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d5000031-a070-429e-a53a-59a45d8c5c30 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7c3dac9f-22c6-4446-937a-e0d286c1bb85');\n",
+              "          const element = document.querySelector('#df-d5000031-a070-429e-a53a-59a45d8c5c30');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -948,7 +948,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 8
         }
       ]
     },
@@ -1007,32 +1007,38 @@
     {
       "cell_type": "code",
       "source": [
-        "# Predict on the test set\n",
         "X_pred = model.predict(X_train)\n",
-        "print(X_pred)\n"
+        "X_pred"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FNGQf2T11s07",
-        "outputId": "a92866b9-d906-44f2-f786-45a6b4978377"
+        "outputId": "96860753-c904-4032-c14a-c7e33225a6c4"
       },
-      "execution_count": 67,
+      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1 1 1 0 0 0 1 0 0 0 0 1 0 0 0 1 1 0 0 1 1 0 1 0 1 0 0 0 0 0 0 1 0 0 1 1 0\n",
-            " 1 0 1 0 0 1 1 1 1 1 0 1 1 0 0 1 0 1 0 0 0 0 0 1 1 0 0 0 0 1 1 0 1 1 1 0 1\n",
-            " 1 0 0 0 1 1 0 0 1 0 0 1 0 0 0 0 0 0 1 0 1 0 1 0 0 0 1 0 1 1 0 1 0 1 1 0 1\n",
-            " 0 0 0 0 0 1 1 1 0 0 1 0 0 0 0 0 1 1 0 0 0 0 0 1 1 1 0 0 1 1 0 1 1 0 1 0 0\n",
-            " 0 1 0 0 1 0 0 0 0 0 0 1 0 0 1 1 0 0 1 1 0 0 1 1 0 1 0 0 1 1 1 0 0 1 0 1 0\n",
-            " 1 0 1 1 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 1 1 0 0 0 1\n",
-            " 0 0 0 1 1 0 1 1 0 0 1 0 0 0 0 0 1 0 1 1 0 1 1 1 1 0 0 1 0 0 0 0 0 1 0 0 0\n",
-            " 0 1 0 0 0]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0,\n",
+              "       1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1,\n",
+              "       1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0,\n",
+              "       1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0,\n",
+              "       0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0,\n",
+              "       1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+              "       0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0,\n",
+              "       0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0,\n",
+              "       1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1,\n",
+              "       1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0,\n",
+              "       0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1,\n",
+              "       0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     },
@@ -1040,24 +1046,52 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "T_accuracy = accuracy_score(y_train, X_pred)\n",
-        "print(\"Accuracy Score:\", T_accuracy)"
+        "model.score(X_train,y_train)"
       ],
       "metadata": {
+        "id": "7pPDOJuRJs7q",
+        "outputId": "9d229eae-1935-4bd9-a887-de440d085150",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "uMqd1XRO2Aps",
-        "outputId": "1a9b51b4-4ce1-43d1-c5ad-1c12c056482e"
+        }
       },
-      "execution_count": 68,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy Score: 1.0\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.score(X_test,y_test)"
+      ],
+      "metadata": {
+        "id": "e2dWn8hkJ6uQ",
+        "outputId": "6f2e795a-bf58-4645-9e47-e08a8adfb56f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     }
